[package]
name = "dbc"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2.9", features = ["json"] }
serde_json = "1.0"
